--- a/app/views/root/root.html.erb
+++ b/app/views/root/root.html.erb
@@ -2,7 +2,9 @@
 <div class="container-fluid">
   <div class="row-fluid">
     <div class="span2" id='sidebar'></div>
-    <div class="span10" id='content'></div>
+    <div class="span10" id='content'>
+      <div id='modal-view'></div>
+    </div>
   </div>
 </div>
 <% else %>
