--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 <html>
 <head>
   
-  <title>Um.brello</title>
+  <title>U.mbrello</title>
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
@@ -32,7 +32,7 @@
           <li class="active">  
             <a class="brand" 
           href="<%= root_url %>"
-            >Um.brello</a>
+            >U.mbrello</a>
           </li>  
           <% if user_signed_in? %>
           <li class="divider-vertical"></li>
