--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -50,7 +50,7 @@
               <% else %>
               <li><a href="<%= new_user_registration_path %>">Sign Up</a></li>  
               <li><a href="<%= new_user_session_path %>">Login</a></li>
-              
+              <!-- <li><a href="<%= new_user_session_path %>">Test Account</a></li> -->
           <% end %>
         </ul> 
       
